force-app/main/default/objects/Order_Coupon_POE__c/Order_Coupon_POE__c.object-meta.xml
<CustomObject>
    <label>Order Coupon</label>
    <nameField>
        <label>Order Coupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders Coupons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>