force-app/main/default/objects/Order_Coupon_POE__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>case(
 TAD_Order__r.RecordType_Name__c ,
&quot;TAD&quot;, &quot;Trip A Deal Pty Limited&quot;,
&quot;TC&quot;, &quot;Trip A Deal Pty Limited&quot;,
&quot;TNZ&quot;, &quot;TripADeal (NZ) Limited&quot;,
&quot;WT&quot;, &quot;TripADeal (NZ) Limited&quot;,
&quot;Trip A Deal Pty Limited&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>