force-app/main/default/objects/Order_Coupon_POE__c/fields/coupon__c.field-meta.xml
<CustomField>
    <fullName>coupon__c</fullName>
    <label>Coupon</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Coupon Status - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>coupon__c.Status__c</field>
            <operation>equals</operation>
            <value>Enabled</value>
        </filterItems>
        <filterItems>
            <field>$Source.Is_Migrated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>coupon__c</referenceTo>
    <relationshipLabel>Orders Coupons</relationshipLabel>
    <relationshipName>Orders_Coupons_POE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>