force-app/main/default/objects/Order_Coupon_POE__c/fields/Feefo__c.field-meta.xml
<CustomField>
    <fullName>Feefo__c</fullName>
    <formula>coupon__r.Is_From_Feefo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feefo?</label>
    <type>Checkbox</type>
</CustomField>