force-app/main/default/objects/Order_Coupon_POE__c/fields/ff_Coupon_Type__c.field-meta.xml
<CustomField>
    <fullName>ff_Coupon_Type__c</fullName>
    <label>Coupon Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
                <default>true</default>
                <label>Discount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>