force-app/main/default/objects/Order_Coupon_POE__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>c2g__codaJournal__c</referenceTo>
    <relationshipLabel>Orders Coupons</relationshipLabel>
    <relationshipName>Orders_Coupons_POE</relationshipName>
    <type>Lookup</type>
</CustomField>