force-app/main/default/objects/Order_Coupon_POE__c/fields/minimum_order_value__c.field-meta.xml
<CustomField>
    <fullName>minimum_order_value__c</fullName>
    <formula>coupon__r.Min_order_value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>