force-app/main/default/objects/Order_Coupon_POE__c/fields/Negative_Total_Coupon_Amount__c.field-meta.xml
<CustomField>
    <fullName>Negative_Total_Coupon_Amount__c</fullName>
    <formula>-  Total_Coupon_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Total Coupon Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>