force-app/main/default/objects/Order_Coupon_POE__c/fields/Negative_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Negative_Total_Discount__c</fullName>
    <formula>- total_discounts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>