force-app/main/default/objects/Order_Coupon_POE__c/fields/Process_CP__c.field-meta.xml
<CustomField>
    <fullName>Process_CP__c</fullName>
    <formula>And(
total_discounts__c &lt;&gt;0,
text(coupon__r.Status__c) = &quot;Enabled&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process CP</label>
    <type>Checkbox</type>
</CustomField>