force-app/main/default/objects/Order_Coupon_POE__c/fields/Total_Coupon_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Coupon_Amount__c</fullName>
    <formula>coupon__r.Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Coupon Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>