force-app/main/default/objects/Order_Coupon_POE__c/validationRules/Check_coupon_currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_coupon_currency</fullName>
    <active>false</active>
    <description>Compares coupon currency with order record type</description>
    <errorConditionFormula>OR(
AND(
 TEXT( coupon__r.currency_code__c ) = &quot;AUD&quot;,  TAD_Order__r.RecordType.Name = &quot;TNZ&quot;
),
AND(
TEXT( coupon__r.currency_code__c ) = &quot;NZD&quot;,  TAD_Order__r.RecordType.Name &lt;&gt; &quot;TNZ&quot;
)
)</errorConditionFormula>
    <errorMessage>This coupon is not made in the currency of the order. Update the coupon or use another coupon.</errorMessage>
</ValidationRule>