force-app/main/default/objects/Order_Coupon_POE__c/validationRules/Coupon_For_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_For_Account</fullName>
    <active>false</active>
    <description>Coupon Account must be same as order Account</description>
    <errorConditionFormula>AND( NOT( ISNULL( coupon__r.account__c ) ), NOT( TAD_Order__r.ordexp_account__c= coupon__r.account__c),  coupon__r.Name__c &lt;&gt; &quot;TADROADSHOWGC17&quot;)</errorConditionFormula>
    <errorDisplayField>coupon__c</errorDisplayField>
    <errorMessage>This coupon is not for the account attached to this order.</errorMessage>
</ValidationRule>