force-app/main/default/objects/Order_Coupon_POE__c/validationRules/Coupon_for_Deal.validationRule-meta.xml
<ValidationRule>
    <fullName>Coupon_for_Deal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK( coupon__r.Deal__c )), 
coupon__r.Deal__c &lt;&gt; TAD_Order__r.ordexp_deal__c
)</errorConditionFormula>
    <errorMessage>This coupon is to be applied with the deal specified on the coupon.</errorMessage>
</ValidationRule>