force-app/main/default/objects/Order_Coupon_POE__c/validationRules/prevent_disabled_coupon_for_order_coupon.validationRule-meta.xml
<ValidationRule>
    <fullName>prevent_disabled_coupon_for_order_coupon</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(coupon__r.Status__c) =&apos;Disabled&apos; &amp;&amp;  Is_Migrated__c=false &amp;&amp; ISCHANGED(Journal__c) =false</errorConditionFormula>
    <errorDisplayField>coupon__c</errorDisplayField>
    <errorMessage>Disabled coupon can&apos;t be modified</errorMessage>
</ValidationRule>