force-app/main/default/objects/Order_Coupon_POE__c/validationRules/TAD_Coupon_For_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>TAD_Coupon_For_Account</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISBLANK( coupon__r.account__c ) ), TAD_Order__r.ordexp_account__c  &lt;&gt;  coupon__r.account__c , coupon__r.Name__c &lt;&gt; &quot;TADROADSHOWGC17&quot;)</errorConditionFormula>
    <errorMessage>Coupon Account must be same as order Account</errorMessage>
</ValidationRule>