force-app/main/default/objects/Order_Coupon_POE__c/validationRules/TAD_Minimum_Amount_Met.validationRule-meta.xml
<ValidationRule>
    <fullName>TAD_Minimum_Amount_Met</fullName>
    <active>true</active>
    <errorConditionFormula>TAD_Order__r.ordexp_gross_amount__c   &lt;  coupon__r.Min_order_value__c</errorConditionFormula>
    <errorMessage>This order has not met the minimum amount to use the chosen coupon. The C/S Manager can override this if required.</errorMessage>
</ValidationRule>